force-app/main/default/objects/DeliveryItem__c/DeliveryItem__c.object-meta.xml
<CustomObject>
    <label>配送品目</label>
    <nameField>
        <label>配送品目名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>