force-app/main/default/objects/DeliveryItem__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>配送</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>配送品目</relationshipLabel>
    <relationshipName>DeliveryItem_Delivery</relationshipName>
    <type>Lookup</type>
</CustomField>