force-app/main/default/objects/DeliveryItem__c/fields/FoodExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FoodExpirationDate__c</fullName>
    <label>食料品の消費期限</label>
    <type>Date</type>
</CustomField>