force-app/main/default/objects/DeliveryItem__c/fields/FoodStorage__c.field-meta.xml
<CustomField>
    <fullName>FoodStorage__c</fullName>
    <label>食料品保管</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-refrigerated (常温)</fullName>
            </value>
            <value>
                <fullName>Frozen (冷凍)</fullName>
            </value>
            <value>
                <fullName>Refrigerated (冷蔵)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>